--- a/plugin.xml
+++ b/plugin.xml
@@ -1,30 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="cordova-plugin-toastyplugin" version="0.0.1">
+        id="cordova-plugin-androidsaml" 
+        version="0.0.1">
+
     <name>AndroidSaml</name>
-
-    <description>An Android Cordova plugin that allows users to display simple Toast messages at the bottom of the screen.</description>
+    <description>An Android Cordova plugin with hooks into the web view to manipulate http requests and redirects</description>
     <license>MIT</license>
+    <keywords>cordova,android,saml,http,redirect</keywords>
+    <repo>https://https://github.com/adamcweitzman/AndroidSaml.git</repo>
+    <issue>https://github.com/adamcweitzman/AndroidSaml/issues</issue>
 
-    <keywords>cordova,android,toast,message,alert</keywords>
-    <repo>https://github.com/stanidesis/toastyplugin/Toast-PhoneGap-Plugin.git</repo>
-    <issue>https://github.com/stanidesis/toastyplugin/issues</issue>
-  
-    <engines>
-        <engine name="cordova" version=">=3.0.0"/>
-    </engines>
-  
-    <js-module src="www/toastyplugin.js" name="toastyPlugin">
-        <clobbers target="window.plugins.toastyPlugin" />
-    </js-module>
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
-            <feature name="ToastyPlugin">
-                <param name="android-package" value="com.stanleyidesis.cordova.plugin.ToastyPlugin"/>
+            <feature name="AndroidSaml">
+                <param name="android-package" value="com.adamweitzman.cordova.plugin.androidsaml"/>
             </feature>
         </config-file>
 
-        <source-file src="src/android/ToastyPlugin.java" target-dir="src/com/stanleyidesis/cordova/plugin" />
+        <source-file src="src/android/AndroidSaml.java" target-dir="src/com/adamweitzman/cordova/plugin" />   
     </platform>
 </plugin>
