--- a/plugin.xml
+++ b/plugin.xml
@@ -12,7 +12,7 @@
     <issue>https://github.com/adamcweitzman/AndroidSaml/issues</issue>
 
     <platform name="android">
-        <config-file target="config.xml" parent="/*">
+        <config-file target="res/xml/config.xml" parent="/*">
             <feature name="AndroidSaml">
                 <param name="android-package" value="com.adamweitzman.cordova.plugin.AndroidSaml"/>
             </feature>
