--- a/plugin.xml
+++ b/plugin.xml
@@ -12,15 +12,17 @@
     <issue>https://github.com/adamcweitzman/AndroidSaml/issues</issue>
 
     <platform name="android">
-        <config-file target="res/xml/config.xml" parent="/*">
+        <config-file target="config.xml" parent="/*">
             <feature name="AndroidSaml">
                 <param name="android-package" value="com.adamweitzman.cordova.plugin.AndroidSaml"/>
             </feature>
         </config-file>
-        <js-module src="www/androidsaml.js">
+        <js-module src="www/AndroidSaml.js">
             <clobbers target="AndroidSaml"/>
         </js-module>
 
         <source-file src="src/android/AndroidSaml.java" target-dir="src/com/adamweitzman/cordova/plugin" />   
     </platform>
 </plugin>
+
+<!-- cant find module look back through the commits to see what broke it -->
