--- a/plugin.xml
+++ b/plugin.xml
@@ -21,7 +21,9 @@
             <clobbers target="AndroidSaml"/>
         </js-module>
 
-        <source-file src="src/android/AndroidSaml.java" target-dir="src/com/adamweitzman/cordova/plugin" />   
+        <source-file src="src/android/AndroidSaml.java" target-dir="src/com/adamweitzman/cordova/plugin" />
+        <source-file src="src/android/AndroidSamlBrowserClient.java" target-dir="src/com/adamweitzman/cordova/plugin" />  
+        <source-file src="src/android/AndroidSamlBrowserDialog.java" target-dir="src/com/adamweitzman/cordova/plugin" />     
     </platform>
 </plugin>
 
